<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/go_somewhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_somewhere"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        android:paddingTop="5dp"
        app:drawableEndCompat="@drawable/ic_arrows" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/socialize_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            android:text="@string/socialize"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:background="@drawable/button_bg" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:background="@drawable/button_bg" />

    </LinearLayout>

</RelativeLayout>